
add_library(dycore INTERFACE)
target_include_directories(dycore INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

if ("${PAMC_MODEL}" STREQUAL "advection")
target_compile_definitions(dycore INTERFACE -D_ADVECTION)
endif()
if ("${PAMC_MODEL}" STREQUAL "layer")
target_compile_definitions(dycore INTERFACE -D_LAYER)
endif()
if ("${PAMC_MODEL}" STREQUAL "extruded")
target_compile_definitions(dycore INTERFACE -D_EXTRUDED)
endif()

if ("${PAMC_HAMIL}" STREQUAL "swe")
target_compile_definitions(dycore INTERFACE -D_SWE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "tswe")
target_compile_definitions(dycore INTERFACE -D_TSWE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "ce")
target_compile_definitions(dycore INTERFACE -D_CE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "ce_p")
target_compile_definitions(dycore INTERFACE -D_CEp)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rho")
target_compile_definitions(dycore INTERFACE -D_MCErho)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rho_p")
target_compile_definitions(dycore INTERFACE -D_MCErhop)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rhod")
target_compile_definitions(dycore INTERFACE -D_MCErhod)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rhod_p")
target_compile_definitions(dycore INTERFACE -D_MCErhodp)
endif()

if ("${PAMC_THERMO}" STREQUAL "none")
target_compile_definitions(dycore INTERFACE -D_THERMONONE)
endif()
if ("${PAMC_THERMO}" STREQUAL "idealgaspottemp")
target_compile_definitions(dycore INTERFACE -D_IDEAL_GAS_POTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "idealgasentropy")
target_compile_definitions(dycore INTERFACE -D_IDEAL_GAS_ENTROPY)
endif()
if ("${PAMC_THERMO}" STREQUAL "constkappavirpottemp")
target_compile_definitions(dycore INTERFACE -D_CONST_KAPPA_VIRPOTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "unapproxpottemp")
target_compile_definitions(dycore INTERFACE -D_UNAPPROX_POTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "unapproxentropy")
target_compile_definitions(dycore INTERFACE -D_UNAPPROX_ENTROPY)
endif()






