
add_library(dycore INTERFACE)
target_include_directories(dycore INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(dycore INTERFACE -D_SPAM)


#include_directories(dycore INTERFACE /home/celdred/parallel-netcdf-gnu/include)
#link_directories(dycore INTERFACE /home/celdred/parallel-netcdf-gnu/lib)
#target_link_libraries(dycore INTERFACE pnetcdf)

target_include_directories(dycore INTERFACE src)
target_include_directories(dycore INTERFACE src/models)
target_include_directories(dycore INTERFACE src/operators)
target_include_directories(dycore INTERFACE src/timesteppers)
target_include_directories(dycore INTERFACE src/hamiltonians)
target_include_directories(dycore INTERFACE src/grids)
target_include_directories(dycore INTERFACE src/common)
target_include_directories(dycore INTERFACE src/io)
target_include_directories(dycore INTERFACE src/core)

if ("${PAMC_MODEL}" STREQUAL "layermodel")
target_compile_definitions(dycore INTERFACE -D_HAMILTONIAN)
target_compile_definitions(dycore INTERFACE -D_LAYER)
endif()
if ("${PAMC_MODEL}" STREQUAL "extrudedmodel")
target_compile_definitions(dycore INTERFACE -D_HAMILTONIAN)
target_compile_definitions(dycore INTERFACE -D_EXTRUDED)
endif()

if ("${PAMC_HAMIL}" STREQUAL "swe")
target_compile_definitions(dycore INTERFACE -D_SWE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "tswe")
target_compile_definitions(dycore INTERFACE -D_TSWE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "ce")
target_compile_definitions(dycore INTERFACE -D_CE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "an")
target_compile_definitions(dycore INTERFACE -D_AN)
endif()
if ("${PAMC_HAMIL}" STREQUAL "man")
target_compile_definitions(dycore INTERFACE -D_MAN)
endif()
if ("${PAMC_HAMIL}" STREQUAL "ce_p")
target_compile_definitions(dycore INTERFACE -D_CEp)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rho")
target_compile_definitions(dycore INTERFACE -D_MCErho)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rho_p")
target_compile_definitions(dycore INTERFACE -D_MCErhop)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rhod")
target_compile_definitions(dycore INTERFACE -D_MCErhod)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rhod_p")
target_compile_definitions(dycore INTERFACE -D_MCErhodp)
endif()

if ("${PAMC_THERMO}" STREQUAL "none")
target_compile_definitions(dycore INTERFACE -D_THERMONONE)
endif()
if ("${PAMC_THERMO}" STREQUAL "idealgaspottemp")
target_compile_definitions(dycore INTERFACE -D_IDEAL_GAS_POTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "idealgasentropy")
target_compile_definitions(dycore INTERFACE -D_IDEAL_GAS_ENTROPY)
endif()
if ("${PAMC_THERMO}" STREQUAL "constkappavirpottemp")
target_compile_definitions(dycore INTERFACE -D_CONST_KAPPA_VIRPOTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "unapproxpottemp")
target_compile_definitions(dycore INTERFACE -D_UNAPPROX_POTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "unapproxentropy")
target_compile_definitions(dycore INTERFACE -D_UNAPPROX_ENTROPY)
endif()

if ("${PAMC_IO}" STREQUAL "parallel")
target_compile_definitions(dycore INTERFACE -D_PARALLELIO)
endif()
if ("${PAMC_IO}" STREQUAL "serial")
target_compile_definitions(dycore INTERFACE -D_SERIALIO)
endif()
if ("${PAMC_IO}" STREQUAL "none")
target_compile_definitions(dycore INTERFACE -D_NOIO)
endif()


